--- a/src/components/Layout/Sider/styles.module.css
+++ b/src/components/Layout/Sider/styles.module.css
@@ -47,7 +47,8 @@
 .bottom,
 .support {
   font-family: ShareTech-Regular;
-  color: #aeb1b7;
+  color: white;
+  opacity: 0.6;
   display: flex;
   flex-direction: column;
   flex: 0 0 1.2em;
