--- a/src/components/Layout/Header/styles.module.css
+++ b/src/components/Layout/Header/styles.module.css
@@ -81,3 +81,31 @@
   text-align: center;
   font-family: shareTech-Regular;
 }
+
+.wheader {
+  background: white;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  flex: 0 0 1.2em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.wavatar {
+  border: 1px solid #979797;
+  width: 0.8em;
+  height: 0.8em;
+  flex: 0 0 0.8em;
+  border-radius: 50%;
+  margin-right: 0.2em;
+}
+
+.welcome {
+  font-size: 1.875rem;
+  font-family: HelveticaNeue;
+}
+
+.more {
+  margin-left: 0.2em;
+  cursor: pointer;
+}
