--- a/src/components/Create/styles.module.css
+++ b/src/components/Create/styles.module.css
@@ -1,4 +1,56 @@
 .background {
+  background: url(/static/media/graph.b9eb84bc.svg) no-repeat fixed bottom;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  background-size: contain;
+}
+
+.columns {
+  position: absolute;
+  display: flex;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  flex-direction: row;
+  align-items: flex-end;
+  overflow: hidden;
+}
+
+.column {
+  width: 0.6em;
+  background: rgba(30, 99, 165, 0.2);
+  opacity: 0.1;
+  margin-right: 0.05em;
+}
+
+.circle {
+  position: absolute;
+  top: 50%;
+  width: 4em;
+  height: 4em;
+  text-align: center;
+  line-height: 4em;
+  border-radius: 50%;
+  border: 0.08em solid #1d2b3c;
+  border-left: 0.08em solid #c4cbd7;
+  opacity: 0.04;
+  color: #1d2b3c;
+  margin-top: -2em;
+  margin-left: 1em;
+  font-family: HelveticaNeue-UltraLight;
+  transform: rotate(45deg);
+}
+
+.number {
+  font-size: 9rem;
+  display: inline-block;
+  transform: rotate(-45deg);
+}
+
+.percent {
+  font-size: 4.5rem;
 }
 
 .create {
