--- a/src/components/Create/styles.module.css
+++ b/src/components/Create/styles.module.css
@@ -1,12 +1,6 @@
 .background {
-  background: url(/static/media/graph.b9eb84bc.svg) no-repeat fixed bottom;
-  width: 100%;
-  height: 100%;
-  position: relative;
+  background: url(./graph.svg) no-repeat fixed bottom;
   background-size: contain;
-}
-
-.columns {
   position: absolute;
   display: flex;
   top: 0;
@@ -23,6 +17,7 @@
   background: rgba(30, 99, 165, 0.2);
   opacity: 0.1;
   margin-right: 0.05em;
+  flex: 0 0 0.6em;
 }
 
 .circle {
@@ -54,4 +49,94 @@
 }
 
 .create {
+  position: relative;
+  padding: 0.37em 0;
+}
+
+.panel {
+  box-sizing: border-box;
+  width: 9.76em;
+  height: 6.8em;
+  padding: 0.71em 0.78em;
+  margin: 0 auto;
+  background: white;
+  box-shadow: 0 0.15em 0.3em 0 rgba(0, 0, 0, 0.2);
+}
+
+.title {
+  font-size: 1.875rem;
+  margin: 0;
+  font-weight: normal;
+}
+
+.selected {
+  margin-top: 0.41em;
+}
+
+.selectedText {
+  display: block;
+  font-size: 1.25rem;
+  color: #4a4a4a;
+}
+
+.modelName {
+  display: block;
+  font-size: 1.25rem;
+  color: #4a4a4a;
+  font-weight: bold;
+}
+
+.selections {
+  margin-bottom: 0.64em;
+  margin-top: 0.46em;
+  display: flex;
+  justify-content: space-between;
+}
+
+.modify,
+.new {
+  box-sizing: border-box;
+  width: 3.8em;
+  height: 2.66em;
+  background: #f9fbfc;
+  border: 2px solid #dde5ef;
+  border-radius: 4px;
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+}
+
+.modify:hover .icon,
+.new:hover .icon {
+  transform: scale(1.2, 1.2);
+}
+
+.iconWrapper {
+  flex: 1 1 0;
+  display: flex;
+  justify-content: center;
+}
+
+.icon {
+  transition: all 0.3s ease;
+}
+
+.text {
+  font-size: 1.25rem;
+  line-height: 3.25rem;
+  background: linear-gradient(to bottom, #5b657b, #243448);
+  display: block;
+  color: white;
+  text-align: center;
+}
+
+.back:before {
+  content: '<';
+}
+
+.back {
+  font-size: 1.25rem;
+  text-decoration: underline;
+  display: block;
+  cursor: pointer;
 }
