--- a/src/components/Create/styles.module.css
+++ b/src/components/Create/styles.module.css
@@ -61,6 +61,7 @@
   margin: 0 auto;
   background: white;
   box-shadow: 0 0.15em 0.3em 0 rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
 }
 
 .title {
@@ -108,7 +109,7 @@
 
 .modify:hover .icon,
 .new:hover .icon {
-  transform: scale(1.2, 1.2);
+  transform: scale(1.1, 1.1);
 }
 
 .iconWrapper {
@@ -128,6 +129,10 @@
   display: block;
   color: white;
   text-align: center;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  margin: -2px -2px;
+  margin-top: 0;
 }
 
 .back:before {
@@ -139,4 +144,5 @@
   text-decoration: underline;
   display: block;
   cursor: pointer;
+  color: #1d2b3c;
 }
