update basic style

--- a/src/components/Common/BlackButton/styles.module.css
+++ b/src/components/Common/BlackButton/styles.module.css
@@ -10,6 +10,9 @@
   height: 3rem;
   width: 100%;
   padding: 0;
+  cursor: pointer;
+  position: relative;
+  composes: hover from 'style';
 }
 
 .blackButton:active {
