--- a/src/components/App/styles.module.css
+++ b/src/components/App/styles.module.css
@@ -4,6 +4,12 @@
   display: flex;
 }
 
+@media only screen and (max-width: 1440px) {
+  .app {
+    font-size: 80px;
+  }
+}
+
 .main {
   display: flex;
   flex-direction: column;
