--- a/src/components/Create/Replace/styles.module.css
+++ b/src/components/Create/Replace/styles.module.css
@@ -47,7 +47,7 @@
 
 .selected {
   margin-top: 0.4em;
-  margin-bottom: 1em;
+  margin-bottom: 0.3em;
   overflow: hidden;
 }
 
@@ -65,5 +65,9 @@
 }
 
 .gap {
-  height: 0.7em;
+  height: 0.2em;
+}
+
+.confirm {
+  width: 3.8em;
 }
