--- a/src/components/Common/Pagination/styles.module.css
+++ b/src/components/Common/Pagination/styles.module.css
@@ -53,6 +53,7 @@
   padding: 0.5rem;
   color: #4a4a4a;
   background: linear-gradient(to bottom, #5b657b, #243448);
+  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2);
 }
 .pagination:global(.ant-pagination.mini
     .ant-pagination-prev
