--- a/src/components/Home/styles.module.css
+++ b/src/components/Home/styles.module.css
@@ -12,6 +12,7 @@
   display: flex;
   height: 0.4em;
   flex: 2 1 0;
+  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2);
 }
 
 .searchName {
@@ -30,7 +31,6 @@
   padding: 0 0.12em;
   flex: 0 0 0;
   background: linear-gradient(to bottom, #5b657b, #243448);
-  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2);
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
   position: relative;
@@ -91,6 +91,7 @@
   flex: 2 1 0;
 }
 
+.createdDate,
 .enable,
 .deploymentStatus,
 .operationAlert,
