--- a/src/components/Detail/styles.module.css
+++ b/src/components/Detail/styles.module.css
@@ -46,4 +46,6 @@
   box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.3);
   border-radius: 4px;
   border-top-left-radius: 0;
+  display: flex;
+  flex-direction: column;
 }
