--- a/src/components/Create/Replace/list.module.css
+++ b/src/components/Create/Replace/list.module.css
@@ -59,11 +59,15 @@
   font-size: 1.125rem;
   font-weight: bold;
   margin-right: 5px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .select {
   flex: 0.5 1 0;
 }
-.projectName,
+.projectName {
+  flex: 1 1 0;
+}
 .modelName {
   flex: 2 1 0;
 }
@@ -88,6 +92,8 @@
   font-size: 1.125rem;
   line-height: 1.2;
   margin-right: 5px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .pot {
   width: 1.5rem;
