--- a/src/components/Create/New/styles.module.css
+++ b/src/components/Create/New/styles.module.css
@@ -61,6 +61,9 @@
   font-size: 1.25rem;
   color: #4a4a4a;
   font-weight: bold;
+  width: 100%;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .name {
