--- a/src/components/Create/styles.module.css
+++ b/src/components/Create/styles.module.css
@@ -89,6 +89,9 @@
   font-size: 1.25rem;
   color: #4a4a4a;
   font-weight: bold;
+  width: 100%;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .selections {
