--- a/src/components/Common/DatabaseSource/styles.module.css
+++ b/src/components/Common/DatabaseSource/styles.module.css
@@ -34,11 +34,10 @@
   box-sizing: border-box;
   border: 1px solid #455267;
   border-radius: 50%;
-  margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-right: 1rem;
+  margin-right: 0.5rem;
   cursor: pointer;
 }
 
@@ -51,7 +50,9 @@
   border-radius: 50%;
   line-height: 1.5rem;
 }
-
+.text {
+  margin-right: 1rem;
+}
 .btns {
   padding: 1rem 0rem 3rem 3rem;
 }
@@ -133,4 +134,9 @@
 }
 .databaseIcon {
   margin-right: 1rem;
+}
+.start {
+  margin-bottom: 1rem;
+}
+.finish {
 }
