--- a/src/components/Detail/Performance/styles.module.css
+++ b/src/components/Detail/Performance/styles.module.css
@@ -100,9 +100,9 @@
   align-items: center;
   border: 1px solid #1d2b3c;
   cursor: pointer;
-  position: absolute;
+  /* position: absolute;
   bottom: 1em;
-  left: 4em;
+  left: 4em; */
   composes: hover from 'style';
 }
 
