--- a/src/components/Detail/Deployment/styles.module.css
+++ b/src/components/Detail/Deployment/styles.module.css
@@ -102,6 +102,21 @@
   composes: hover from 'style';
 }
 
+/* for input file bug */
+.selectionWithoutHover {
+  display: flex;
+  line-height: 0.48em;
+  padding: 0 0.2em;
+  margin-right: 0.3em;
+  justify-content: center;
+  border-radius: 4px;
+  background: linear-gradient(to bottom, white, #f1f3f5);
+  box-shadow: 0 3px 6px 1px rgba(0, 0, 0, 0.2);
+  font-weight: 500;
+  cursor: pointer;
+  height: 3rem;
+}
+
 .selection:active {
   background: linear-gradient(to top, white, #f1f3f5);
 }
