--- a/src/components/Layout/Sider/styles.module.css
+++ b/src/components/Layout/Sider/styles.module.css
@@ -9,11 +9,16 @@
 
 .logo {
   flex: 0 0 1.2em;
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: rgba(255, 255, 255, 0.5);
   box-shadow: 0 4px 7px rgba(0, 0, 0, 0.5);
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
+}
+
+.logoImg {
+  width: 80%;
 }
 
 .mrone {
