--- a/src/components/Home/styles.module.css
+++ b/src/components/Home/styles.module.css
@@ -1,135 +1,220 @@
 .home {
-  composes: content from 'style';
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    flex: auto;
+    background-color: #e0e4e9;
+    flex-direction: column;
 }
 
-.filter {
-  height: 0.4em;
-  display: flex;
-  margin-top: 0.2em;
+.projects {
+    display: flex;
+    padding: 0.12em;
+    flex-wrap: wrap;
+    flex-direction: row;
+    overflow: hidden;
 }
 
-.search {
-  display: flex;
-  height: 0.4em;
-  flex: 2 1 0;
-  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2);
-}
-
-.searchName {
-  font-size: 1rem;
-  border: none;
-  outline: none;
-  height: 100%;
-  flex: 1 1 0;
-  border-top-left-radius: 4px;
-  border-bottom-left-radius: 4px;
-  padding: 0 0.5em;
-}
-
-.submit {
-  display: flex;
-  padding: 0 0.12em;
-  flex: 0 0 0;
-  background: linear-gradient(to bottom, #5b657b, #243448);
-  border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px;
-  position: relative;
-  composes: hover from 'style';
-}
-
-.submit:active {
-  background: linear-gradient(to top, #5b657b, #243448);
-}
-
-.searchButton {
-}
-
-.listWrapper {
-  padding: 0.12em;
-  box-sizing: border-box;
-  border: 1px solid #b5bec6;
-  border-radius: 4px;
-  background: #e0e3e9;
-  margin-top: 0.2em;
-}
-
-.list {
-  max-height: 8.4em;
-  overflow-y: auto;
-}
-
-.head,
-.project {
-  display: flex;
-  padding: 0 0.2em;
-}
-
-.head {
-  padding: 0.1em 0.2em 0.2em 0.2em;
+.scrollY{
+    overflow-y: scroll;
 }
 
 .project {
-  min-height: 0.8em;
-  background: white;
-  margin-bottom: 0.04em;
-  border-radius: 4px;
-  align-items: center;
+    display: flex;
+    width: 4.2em;
+    height: 3.2em;
+    margin: 0.25em 0.1em;
+    border-radius: 4px;
+    background-color: #ffffff;
+    box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.2);
+    flex-direction: column;
+    position: relative;
 }
 
-.project:hover {
-  background: #f6f6f8;
+.newProject {
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
 }
 
-.project:hover .projectName,
-.project:hover .modelName {
-  text-decoration: underline;
+.newProject img {
+    display: flex;
+    flex: none;
+    width: 0.8em;
+    height: 0.8em;
+    margin-bottom: 0.4em;
 }
 
-.head span,
-.project span {
-  font-size: 1.125rem;
-  margin-right: 0.5rem;
+.newProject span {
+    font-size: 1.125rem;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.22;
+    letter-spacing: normal;
+    font-family: HelveticaNeue;
 }
 
-.head span {
-  font-weight: bold;
+.tools {
+    display: flex;
+    flex: 0 0 0.88em;
+    padding: .24em;
 }
 
-.projectName {
-  flex: 1 1 0;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  cursor: pointer;
+.info {
+    display: flex;
+    flex: auto;
+    padding: 0.3em;
+    flex-direction: column;
 }
 
-.modelName {
-  flex: 2 1 0;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  cursor: pointer;
+.name {
+    font-size: 1.125rem;
+    line-height: 1.375rem;
+    display: flex;
+    flex: none;
+    margin-bottom: 0.75rem;
 }
 
-.createdDate,
-.enable,
-.deploymentStatus,
-.operationAlert,
-.performanceAlert,
-.craetedDate,
-.owner {
-  flex: 1 1 0;
-  overflow: hidden;
-  text-overflow: ellipsis;
+.description {
+    font-size: 1.125rem;
+    line-height: 1.375rem;
+    display: flex;
+    flex: auto;
 }
 
-.statusIcon {
-  margin-right: 0.5rem;
-  vertical-align: bottom;
+.sub {
+    display: flex;
+    flex: 0 0 0.5em;
+    padding: 0 0.3em;
+    align-items: center;
+    color: #636363;
+    background-color: #f0f2f6;
 }
 
-.na {
-  color: #9b9b9b;
+.partner {
+    display: flex;
+    flex: auto;
+    font-size: 1.125rem;
 }
 
-.warning {
-  color: #ff3151;
+.time {
+    display: flex;
+    flex: auto;
+    justify-content: flex-end;
+    font-size: 0.75rem;
+}
+
+.cover {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 4px;
+    background: rgba(29, 43, 60, 0.8);
+    display: flex;
+    flex-direction: column;
+    padding: 0.3em;
+    color: #fff;
+    display: none;
+}
+
+.cover.active {
+    display: flex;
+}
+
+.actionBox {
+    display: flex;
+    flex: 0 0 0.3em;
+}
+
+.select {
+    display: flex;
+    flex: 2 1 auto;
+}
+
+.action {
+    display: flex;
+    flex: auto;
+}
+
+.openBox {
+    display: flex;
+    flex: auto;
+    justify-content: center;
+    align-items: center;
+}
+
+.open {
+    height: .5em;
+    width: 1.25em;
+    border: 1px solid #fff;
+    border-radius: 4px;
+    display: flex;
+    background: rgba(255, 255, 255, 0.2);
+    cursor: pointer;
+}
+
+.open span{
+    display: flex;
+    font-size: 1.25rem;
+    flex: auto;
+    justify-content: center;
+    align-items: center;
+}
+
+.action img {
+    height: 0.3em;
+    width: 0.3em;
+    margin: 0 0.1em;
+    display: flex;
+    flex: auto;
+    cursor: pointer;
+}
+
+.circle {
+    height: 0.3em;
+    width: 0.3em;
+    border: 4px solid #fff;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.checked {
+    height: 0.3em;
+    width: 0.3em;
+    cursor: pointer;
+}
+
+.bar {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    display: flex;
+    background-color: #ffffff;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+    height: 0.6em;
+    align-items: center;
+    padding: 0 0.5em;
+}
+
+.bar .circle {
+    border: solid 2px #50647a;
+}
+
+.bar span {
+    font-size: 0.875rem;
+    font-family: HelveticaNeue;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: #4a4a4a;
+}
+
+.bar .count {
+    font-size: 1.25rem;
+    color: #31c4e9;
+    margin-left: 1em;
 }
