--- a/src/components/Layout/Header/styles.module.css
+++ b/src/components/Layout/Header/styles.module.css
@@ -85,14 +85,10 @@
 }
 
 .wheader {
-  background: white;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-  flex: 0 0 1.2em;
-  display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1;
-  overflow-x: auto;
+  display: flex;
+  flex: auto;
 }
 
 .wavatar {
@@ -112,4 +108,70 @@
 .more {
   margin-left: 0.2em;
   cursor: pointer;
+}
+
+.notification {
+  display: flex;
+  flex: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  margin: 0 0.3em;
+  position: relative;
+}
+
+.notification img {
+  margin: 0.16em;
+  height: 0.32em;
+  width: 0.28em;
+}
+
+.notification span{
+  font-size: 0.875rem;
+  font-family: HelveticaNeue;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #1d2b3c;
+}
+
+span.num {
+  font-weight: bold;
+  color: #ff3151;
+}
+
+.pot {
+  position: absolute;
+  width: 0.12em;
+  height: 0.12em;
+  background: #ff3151;
+  border-radius: 50%;
+  top: 0.36em;
+  right: 0.3em;
+}
+
+.menu {
+  display: flex;
+  flex: auto;
+  justify-content: center;
+}
+
+.tools {
+  display: flex;
+  flex: none;
+}
+
+.item {
+  max-width: 2.6em;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  flex: auto;
+}
+
+.item.active{
+  border-bottom: 0.04em solid #1d2b3c;
 }
