--- a/src/components/Project/styles.module.css
+++ b/src/components/Project/styles.module.css
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     flex: auto;
+    overflow: auto;
 }
 
 .project span,
@@ -29,6 +30,7 @@
     margin-top: 0.3em;
     width: 1.1em;
     height: 0.4em;
+    margin-bottom: 0.6em;
 }
 
 .continue {
