--- a/src/components/Modeling/styles.module.css
+++ b/src/components/Modeling/styles.module.css
@@ -139,14 +139,17 @@
 
 .performanceBox {
     display: flex;
+    flex: auto;
+    justify-content: center;
 }
 
 .performance {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-left: 0.9em; 
+    margin-left: 0.2em; 
     margin-top: 0.2em;
+    justify-content: center;
 }
 
 .performance path:last-child {
@@ -251,7 +254,7 @@
     max-width: 100%;
     overflow: hidden;
     display: block;
-    text-overflow: ellipsis;
+    text-overflow: clip;
     white-space: nowrap;
 }
 
@@ -273,8 +276,8 @@
     align-items: center;
     padding: 0.08em 0;
     border-bottom: 1px solid #979797;
-    min-width: 1.3em;
-    margin: 0 0.1em;
+    min-width: 1.4em;
+    margin: 0 0.05em;
 }
 
 .cell .progress span {
@@ -292,7 +295,7 @@
 }
 
 .predict {
-    width: 3.7em;
+    width: 3.1em;
     border: none;
 }
 
@@ -316,4 +319,26 @@
     align-items: center;
     position: absolute;
     left: 0.05em;
+}
+
+.rmsePerformance,
+.r2Performance {
+    display: flex
+}
+
+.rmsePerformance span {
+    font-size: 2.2rem;
+    color: #adaafc;
+}
+
+.r2Performance span {
+    font-size: 2.2rem;
+    color: #9be44b;
+}
+
+.loading {
+    display: flex;
+    flex: auto;
+    justify-content: center;
+    align-items: center;
 }
