--- a/src/components/Modeling/styles.module.css
+++ b/src/components/Modeling/styles.module.css
@@ -251,9 +251,6 @@
 
 .cell span {
     font-size: 0.875rem;
-    max-width: 100%;
-    overflow: hidden;
-    display: block;
     text-overflow: clip;
     white-space: nowrap;
 }
@@ -341,4 +338,103 @@
     flex: auto;
     justify-content: center;
     align-items: center;
+}
+
+.modelStart {
+    display: flex;
+    flex: auto;
+    flex-direction: column;
+    margin: 0 1.85em;
+}
+
+.startTitle {
+    display: flex;
+    margin: 0.45em 0;
+    font-family: HelveticaNeue;
+}
+
+.startTitle span {
+    font-size: 1.5rem;
+}
+
+.trainBox {
+    display: flex;
+    flex-direction: column;
+    width: 4.5em;
+    height: 4.5em;
+    border-radius: 5px;
+    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2);
+    background-color: #ffffff;
+    border: solid 1px #c4cbd7;
+    position: relative;
+}
+
+.train {
+    display: flex;
+    flex: 0 0 0.4em;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    background-image: linear-gradient(to bottom, #5b657b, #243448);
+    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2);
+    width: 100%;
+    border: none;
+    outline: none;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.train span {
+    font-family: Arial;
+    font-size: 1rem;
+    color: #ffffff;
+    display: flex;
+}
+
+.trainBlock {
+    display: flex;
+    flex: auto;
+    flex-direction: column;
+    align-items: center;
+}
+
+.trainRecommend {
+    display: flex;
+    position: absolute;
+    left: 0.3em;
+    top: 0.2em;
+}
+
+.trainRecommend span {
+    font-size: 0.875rem;
+}
+
+.trainImg {
+    display: flex;
+    margin-top: 1.1em;
+    flex: none;
+}
+
+.trainName {
+    display: flex;
+    justify-content: center;
+    margin: 0.2em 0;
+}
+
+.trainName span {
+    display: flex;
+    font-size: 1.5rem;
+}
+
+.trainDesc {
+    display: flex;
+    justify-content: center;
+    margin: 0.13em 0.5em;
+}
+
+.trainDesc span {
+    font-size: 0.875rem;
+    display: flex;
+    line-height: 1.43;
+    color: #747473;
 }
