--- a/src/components/Modeling/styles.module.css
+++ b/src/components/Modeling/styles.module.css
@@ -492,16 +492,24 @@
 
 .detailRow span {
     font-size: 0.875rem;
+    overflow: hidden;
+    max-width: 100%;
+    display: block;
+    text-overflow: ellipsis;
+    text-decoration: none;
+    white-space: nowrap;
 }
 
 .detailName {
     display: flex;
     flex: 0 0 1em;
+    width: 1em;
 }
 
 .detailNum {
     display: flex;
     flex: 0 0 1em;
+    margin-left: 0.1em;
 }
 
 .detailProcess {
