--- a/src/components/Data/styles.module.css
+++ b/src/components/Data/styles.module.css
@@ -177,6 +177,7 @@
     display: flex;
     flex-direction: column;
     flex: auto;
+    overflow: hidden;
 }
 
 .schemaTools {
@@ -196,7 +197,7 @@
     background-image: linear-gradient(to bottom, #5b657b, #243448);
     color: #fff;
     padding: 0 0.2em;
-    margin-left: 0.85em;
+    margin-left: 0.4em;
     cursor: pointer;
 }
 
@@ -222,6 +223,16 @@
     border-right: 1px solid #ccc;
 }
 
+.titleCell {
+    display: flex;
+    flex: none;
+    align-items: center;
+    padding: 0 0.1em;
+    border-bottom: 1px solid #ccc;
+    border-right: 1px solid #ccc;
+    padding-top: 3px;
+}
+
 .content span {
     font-size: 0.875rem;
     overflow: hidden;
@@ -244,6 +255,51 @@
 
 .checked {
     color: #9b9b9b;
+}
+
+.missed {
+    padding-top: 0px;
+    border-top: 3px solid #ff3151;
+}
+
+.duplicated {
+    padding-top: 0px;
+    border-top: 3px solid #f19400;
+}
+
+.schemaMissed,
+.schemaDuplicated {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 0.2em;
+}
+
+.schemaMissed span {
+    font-size: 0.875rem;
+    color: #ff3151;
+ }
+
+.schemaMissed .errorBlock{
+    background: #ff3151;
+    width: 0.1em;
+    height: 0.1em;
+    display: flex;
+    margin: 0 0.08em;
+}
+
+.schemaDuplicated span {
+    font-size: 0.875rem;
+    color: #f19400;
+    white-space: nowrap;
+}
+
+.schemaDuplicated .errorBlock{
+    background: #f19400;
+    width: 0.1em;
+    height: 0.1em;
+    display: flex;
+    margin: 0 0.08em;
 }
 
 .content select {
@@ -400,4 +456,8 @@
     right: 0;
     padding: 0 0.2em;
     cursor: pointer;
+}
+
+.disabled {
+    cursor: not-allowed;
 }
