--- a/src/components/Modeling/styles.module.css
+++ b/src/components/Modeling/styles.module.css
@@ -9,7 +9,7 @@
     display: flex;
     flex: auto;
     flex-direction: column;
-    margin: 0 1.85em;
+    padding: 0 10%;
 }
 
 .modelResult span {
@@ -381,7 +381,7 @@
     display: flex;
     flex: auto;
     flex-direction: column;
-    margin: 0 1.85em;
+    padding: 0 10%;
 }
 
 .startTitle {
