--- a/src/components/Project/styles.module.css
+++ b/src/components/Project/styles.module.css
@@ -1,6 +1,6 @@
 .project {
     color: #4a4a4a;
-    padding: 0 1.85em;
+    padding: 0 10%;
     display: flex;
     flex-direction: column;
     flex: auto;
