--- a/src/components/Deploy/styles.module.css
+++ b/src/components/Deploy/styles.module.css
@@ -8,6 +8,10 @@
   margin-top: 0.2em;
 }
 
+.filter > div {
+  margin-right: 0.1em;
+}
+
 .listWrapper {
   padding: 0.12em;
   box-sizing: border-box;
