--- a/src/components/Detail/Status/list.module.css
+++ b/src/components/Detail/Status/list.module.css
@@ -87,11 +87,14 @@
   border-radius: 5px;
   margin-top: 0.3em;
   padding: 0.25em;
+  display: flex;
+  flex-direction: column;
 }
 .head {
   display: flex;
   margin-bottom: 0.25em;
   padding: 0 0.2em;
+  flex: 0 0 0.4em;
 }
 .head span {
   flex: 1 1 0;
@@ -102,6 +105,7 @@
 .list {
   display: flex;
   flex-direction: column;
+  overflow-y: auto;
 }
 .project {
   display: flex;
@@ -110,10 +114,12 @@
   background: white;
   margin-bottom: 0.04em;
   border-radius: 4px;
+  flex: 1 0 auto;
 }
 .project:hover {
   background: #f6f6f8;
 }
+.project a,
 .project span {
   flex: 1 1 0;
   font-size: 1rem;
@@ -121,6 +127,10 @@
   text-overflow: ellipsis;
   margin-right: 1rem;
   line-height: 1.2;
+}
+.head .performance,
+.project .performance {
+  flex: 1.5 1 0;
 }
 .issue {
   color: #ff3151;
